tests/positive/pr115_compound_terminators.safe
package pR115_Compound_Terminators

   type count is range 0 to 10;

   function adjust (input : count) returns count

      var current : count = input
      if current > 5
         current = 5
      else if current < 5
         current = 4

      for I in 1 to 2
         if current < 5
            current = 5


      return current



