tests/negative/neg_pr115_same_line_missing_semicolon.safe
package neg_PR115_Same_Line_Missing_Semicolon

   type counter is range 0 to 10;

   function broken returns counter

      return 0 return 1;



